[tool.poetry]
name = "chartmaker"
version = "0.1.0"
description = ""
authors = ["mdeboute <martin.deboute@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
black = "^21.6b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
